# hands-cv-unipd

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.yaml
include/: hand.h  image.h  loader.h  normalized_box.h  printer.h  saver.h  segmentation_utils.h  yolo_detector.h
src/: hand.cpp  image.cpp  loader.cpp  normalized_box.cpp  printer.cpp  saver.cpp  segmentation_utils.cpp  yolo_detector.cpp
utils/datasets-tools/: cli.py  yolo.py
utils/datasets-tools/objects/: dataset.py
